--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,6 +4,7 @@
     <title>Travel Chatbot Assistant</title>
     <link rel="stylesheet" href="./css/app.css"/>
     <link rel="stylesheet" href="./css/common.css"/>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 </head>
 <body>
 <noscript>
@@ -56,6 +57,7 @@
                 <form class="chat-form" id="form">
                     <textarea class="chat-form-input" placeholder="Type your message here..." rows="1" maxlength="640" id="textarea"></textarea>
                     <button type="submit" class="chat-button hidden" id="send"></button>
+                    <button type="button" class="speak-button disabled" id="speak"><i class="fas fa-microphone"></i></button>
                 </form>
             </div>
         </div>
