--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -17,30 +17,9 @@
     </div>
     <div class="messenger">
         <div class="left-panel">
-            <div class="options">
-                <li class="option selected">
-                    <div class="icon">
-                        <div class="bot">
+            <ul id="log-box">
 
-                        </div>
-                    </div>
-                    <div class="description">
-                        <p class="title">Ask Brian.Ai</p>
-                        <p class="subtitle">Your Virtual Travel Buddy!</p>
-                    </div>
-                </li>
-                <li class="option">
-                    <div class="icon">
-                        <div class="saved">
-
-                        </div>
-                    </div>
-                    <div class="description">
-                        <p class="title">Saved Places</p>
-                        <p class="subtitle">Your Bookmarked Places</p>
-                    </div>
-                </li>
-            </div>
+            </ul>
         </div>
         <div class="right-panel">
             <div class="messages">
@@ -66,6 +45,8 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.1.4/sockjs.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCXGMyUxFTg1Yq8QGiliMb-sTQMAcWSxcQ"
+        type="text/javascript"></script>
 <script src="./js/main.js"></script>
 </body>
 </html>
