--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,6 +5,10 @@
     <link rel="stylesheet" href="./css/app.css"/>
     <link rel="stylesheet" href="./css/common.css"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+    <!-- Add the slick-theme.css if you want default styling -->
+    <link rel="stylesheet/less" type="text/css" href="./libs/slick/slick.less"/>
+    <!-- Add the slick-theme.css if you want default styling -->
+    <link rel="stylesheet/less" type="text/css" href="./libs/slick/slick-theme.less"/>
 </head>
 <body>
 <noscript>
@@ -28,7 +32,32 @@
                 </div>
                 <div style="height: 100%; overflow: auto;">
                 <ul id="message-box">
-
+<!--                    <li class="no-list" style="padding-left: 15px; padding-right: 15px;">-->
+<!--                        <div class="inline-list">-->
+<!--                            <div class="restaurant-item">-->
+<!--                                <div class="restaurant-container">-->
+<!--                                    <img src="https://cdn1.tripoto.com/media/filter/tst/img/1/Image/1516514811_elphin_2.jpg">-->
+<!--                                    <div class="information">-->
+<!--                                        <h3>Name</h3>-->
+<!--                                        <h4>Address</h4>-->
+<!--                                    </div>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                            <div class="restaurant-item">-->
+<!--                                <div class="restaurant-container">-->
+<!--                                    <img src="https://cdn1.tripoto.com/media/filter/tst/img/1/Image/1516514811_elphin_2.jpg">-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                            <div class="restaurant-item">-->
+<!--                                <div class="restaurant-container">-->
+<!--                                    <h3>3</h3>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                            <div><h3>4</h3></div>-->
+<!--                            <div><h3>5</h3></div>-->
+<!--                            <div><h3>6</h3></div>-->
+<!--                        </div>-->
+<!--                    </li>-->
                 </ul>
                 </div>
             </div>
@@ -43,10 +72,21 @@
     </div>
 </div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.1.4/sockjs.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCXGMyUxFTg1Yq8QGiliMb-sTQMAcWSxcQ"
+<script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js" ></script>
+<script src="libs/bbb/sockjs.min.js"></script>
+<script src="libs/aaa/stomp.min.js"></script>
+<script
+        src="http://code.jquery.com/jquery-1.12.4.min.js"
+        integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
+        crossorigin="anonymous"></script>
+<script
+        src="http://code.jquery.com/jquery-1.12.4.min.js"
+        integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
+        crossorigin="anonymous"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAVxM30XgvxktwAKHZGZ2_jyMy61SUUL4U"
         type="text/javascript"></script>
+<script src="./libs/slick/slick.min.js"></script>
 <script src="./js/main.js"></script>
+<script src="./js/slick.js"></script>
 </body>
 </html>
